# registry

./: .gitignore  CHANGELOG.md  README.md  capability-catalog.json  pyproject.toml  registry.json
.claude-plugin/: marketplace.json
.github/workflows/: tip-conformance.yml
claude-code/: README.md  manifest.json
schemas/: stateful_surfaces.yaml  version.json
schemas/manifests/: README.md  adapter.schema.json  client-profile.schema.json  plugin.schema.json  provider-profile.schema.json
schemas/tip/: README.md  capabilities.schema.json  compatibility.schema.json  context-package-v1.schema.json  error.schema.json  handoff-envelope-v1.schema.json  headers.schema.json  intent-contract.schema.json  metadata.schema.json  pak-reason-codes-v1.schema.json  pak-risk-flags-v1.schema.json  pak-v1.schema.json  reasoning-usage-v1.schema.json  route_classes.json  telemetry-event.schema.json
scripts/: publish-validator.sh
test_vectors/: README.md
test_vectors/capabilities/: fail-no-namespace.json  fail-uppercase-prefix.json  valid-ext-namespace.json  valid-intent-contract-headers-v1.json  valid-tip-labels.json
test_vectors/companion-journal/: fail-missing-session-id.json  valid-full-pre-send.json  valid-minimal-companion-savings.json
test_vectors/compatibility/: fail-bad-version-format.json  valid-range.json
test_vectors/golden/: tip-adapter.json  tip-companion.json  tip-dashboard-consumer.json  tip-plugin.json  tip-proxy.json
test_vectors/handoff-envelope/: fail-ambiguous-stop-condition.json  fail-missing-objective-current.json  fail-missing-session-id.json  valid-checkpoint-handoff.json  (+2 more)
tests/: test_conformance_suite.py
tokenpak_tip_validator/: README.md  __init__.py  __main__.py  core.py  profiles.py  schema.py  wire.py
(+27 files in other folders)
