[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenpak-tip-validator"
version = "0.1.1"
description = "Conformance validator for the TokenPak Integration Protocol (TIP-1.0)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "tokenpak", email = "hello@tokenpak.ai" }
]
keywords = ["tokenpak", "tip", "conformance", "protocol", "validator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "jsonschema>=4.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
tokenpak-tip-validator = "tokenpak_tip_validator.__main__:main"

[project.urls]
Homepage = "https://tokenpak.ai"
Repository = "https://github.com/tokenpak/registry"
Documentation = "https://docs.tokenpak.ai/protocol/conformance"

[tool.setuptools.packages.find]
include = ["tokenpak_tip_validator*"]
exclude = ["tests*", "test_vectors*", "schemas*"]

[tool.setuptools.package-data]
tokenpak_tip_validator = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
